# kSimd

./: .clang-format  .clangd  .cursorrules  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  ai_agent_prompt_example.txt
.github/workflows/: test.yml
.kilocode/rules/: core.md
.kilocode/workflows/: add_new_op.md
document/: api_doc.md  compiler_options.md  introduction.md  macros.md
examples/: CMakeLists.txt  c_func_export.cpp  crc32c_checksum.cpp  dyn_dispatch.cpp  simd_batch_dyn_dispatch.cpp  simd_batch_static_dispatch.cpp  utils.hpp
examples/asm_test/: bitcast.cpp
include/kSimd/: aligned_allocate.hpp  base_op.hpp  dispatch_this_file.hpp  fixed_op.hpp  fp16_convert.hpp  op.hpp  packed_op.hpp  simd_op.hpp  type_op.hpp
include/kSimd_IDE/: IDE_hint.hpp  IDE_macros.hpp
scripts/: dump_symbols_gcc.py  generate_all_gnu_asm.py  generate_gnu_asm.py  run_all_test.py  test_all_gnu_asm.py  test_arm.py  test_neon.py  test_scalar_x86.py  test_x86.py
src/: one_cpp.cpp
tests/: CMakeLists.txt  aligned_allocate_free.cpp  basic.cpp  bitcast_all.cpp  cpuid_support.cpp  f16c_sim.cpp  floating_point_all.inl  fp32_fp16_cvt.cpp  no_testing_macro.cc  not_support_instruction.cpp  test.hpp
tests/base_op/: f16_load_store.cpp
tests/base_op/ALL_TYPE_T/: all_type.inl  double.cpp  fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  float.cpp  float32.cpp  float64.cpp  full__Float16.cpp  full__Float32.cpp  full_float.cpp  full_std_float16_t.cpp  full_std_float32_t.cpp  std_float32_t.cpp
tests/base_op/ALL_TYPE_T/f16/: fixed128__Float16.cpp  fixed128_arm__fp16.cpp  fixed128_std_float16_t.cpp  full__Float16.cpp  full_arm__fp16.cpp  full_std_float16_t.cpp
tests/base_op/ALL_TYPE_T/f32/: fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  full__Float32.cpp  full_float.cpp  full_std_float32_t.cpp
tests/base_op/ALL_TYPE_T/f64/: fixed128__Float64.cpp  fixed128_double.cpp  fixed128_std_float64_t.cpp  full__Float64.cpp  full_double.cpp  full_std_float64_t.cpp
tests/base_op/ALL_TYPE_T/i16/: fixed128_int16_t.cpp  full_int16_t.cpp
tests/base_op/ALL_TYPE_T/i32/: fixed128_int32_t.cpp  full_int32_t.cpp
tests/base_op/ALL_TYPE_T/i64/: fixed128_int64_t.cpp  full_int64_t.cpp
tests/base_op/ALL_TYPE_T/i8/: fixed128_int8_t.cpp  full_int8_t.cpp
tests/base_op/ALL_TYPE_T/u16/: fixed128_uint16_t.cpp  full_uint16_t.cpp
tests/base_op/ALL_TYPE_T/u32/: fixed128_uint32_t.cpp  full_uint32_t.cpp
tests/base_op/ALL_TYPE_T/u64/: fixed128_uint64_t.cpp  full_uint64_t.cpp
tests/base_op/ALL_TYPE_T/u8/: fixed128_uint8_t.cpp  full_uint8_t.cpp
tests/base_op/FLOAT_T/: double.cpp  fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  float.cpp  float32.cpp  float64.cpp  floating_point.inl  full__Float32.cpp  full_float.cpp  full_std_float32_t.cpp  std_float32_t.cpp
tests/base_op/FLOAT_T/f16/: fixed128__Float16.cpp  fixed128_arm__fp16.cpp  fixed128_std_float16_t.cpp  full__Float16.cpp  full_arm__fp16.cpp  full_std_float16_t.cpp
tests/base_op/FLOAT_T/f32/: fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  full__Float32.cpp  full_float.cpp  full_std_float32_t.cpp
tests/base_op/FLOAT_T/f64/: fixed128__Float64.cpp  fixed128_double.cpp  fixed128_std_float64_t.cpp  full__Float64.cpp  full_double.cpp  full_std_float64_t.cpp
tests/base_op/SIGNED_T/: double.cpp  fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  float.cpp  float32.cpp  float64.cpp  full__Float32.cpp  full_float.cpp  full_std_float32_t.cpp  signed.inl  std_float32_t.cpp
tests/base_op/SIGNED_T/f16/: fixed128__Float16.cpp  fixed128_arm__fp16.cpp  fixed128_std_float16_t.cpp  full__Float16.cpp  full_arm__fp16.cpp  full_std_float16_t.cpp
tests/base_op/SIGNED_T/f32/: fixed128__Float32.cpp  fixed128_float.cpp  fixed128_std_float32_t.cpp  full__Float32.cpp  full_float.cpp  full_std_float32_t.cpp
tests/base_op/SIGNED_T/f64/: fixed128__Float64.cpp  fixed128_double.cpp  fixed128_std_float64_t.cpp  full__Float64.cpp  full_double.cpp  full_std_float64_t.cpp
tests/base_op/SIGNED_T/i16/: fixed128_int16_t.cpp  full_int16_t.cpp
tests/base_op/SIGNED_T/i32/: fixed128_int32_t.cpp  full_int32_t.cpp
tests/base_op/SIGNED_T/i64/: fixed128_int64_t.cpp  full_int64_t.cpp
tests/base_op/SIGNED_T/i8/: fixed128_int8_t.cpp  full_int8_t.cpp
tests/disable_isa_test/: header.hpp  kernel_disable_avx2_fma3.cc  kernel_disable_neon.cc  kernel_disable_sse4_1.cc  kernel_disable_x86_v2.cc  kernel_disable_x86_v3.cc  kernel_disable_x86_v4.cc  main.cc
tests/extension/math/: float32.cpp  float64.cpp  floating_point.inl
tests/extension/math/ALL_TYPE_T/: all_type.inl  float32.cpp  float64.cpp
tests/extension/math/FLOAT_T/: float32.cpp  float64.cpp  floating_point.inl
tests/extension/vmath/: fixed128_float.cpp  float.cpp  full_float.cpp  vmath.inl
tests/extension/vmathf/: float32.cpp  vmathf.inl
tests/fixed_op/ALL_TYPE_T/: all_type.inl  float32.cpp
tests/fixed_op/FLOAT_T/: float32.cpp  float32_4x1.cpp  float32_4x2.cpp  floating_point.inl
tests/inline_test/: inline_cpp_1.cc  inline_cpp_2.cc  inline_header.hpp  inline_hpp_1.hpp  inline_hpp_2.hpp  inline_main.cc
tests/kernels/: crc32c.cc  popcnt.cc
tests/macro_test/: header.hpp  kernel_disable_avx2_max.cc  kernel_enable_all.cc  main.cc
tests/packed_op/ALL_TYPE_T/: all_type.inl  float32x4.cpp
tests/packed_op/FLOAT_T/: floating_point.inl
tests/simd_op/: float32_all.cpp  float64_all.cpp  floating_point_all.inl
tests/simd_op/ALL_TYPE_T/: all_type.inl  float32.cpp  float64.cpp
tests/simd_op/FLOAT_T/: float32.cpp  float64.cpp  floating_point.inl
tests/static_test/: static_cpp_1.cc  static_cpp_2.cc  static_header.hpp  static_hpp_1.hpp  static_hpp_2.hpp  static_main.cc
tests/type_op/: bitcast_all.cpp
tests/x86/: aligned_allocate_free.cpp  basic.cpp  cpuid_support.cpp  not_support_instruction.cpp
tests_asm/: bitcast.cpp  clamp.cpp  composed_batch_type.cpp  lambda.cpp  lerp.cpp  math.cpp  multi_intrinsic_target.cpp  multi_simd_var.cpp  operator_overload.cpp  safe_clamp.cpp  sin.cpp  template_dispatch.cpp
(+150 files in other folders)
